<resources>
    <string name="app_name">ComputerStore</string>
    <string name="computer_store">Computer Store</string>
    <string name="item">Item</string>
    <string name="lblQuantity">Quantity</string>
    <string name="lblCpu_350_00">CPU ($350.00)</string>
    <string name="lblRam_250_00">RAM ($250.00)</string>
    <string name="lblMouse_15_50">Mouse ($15.50)</string>
    <string name="btnOrder">Order</string>
    <string name="OrderResult">Order Result</string>
    <string name="lblItemsOrdered">Items Ordered:</string>
    <string name="cpu_s">CPU(s):</string>
    <string name="ram_s">RAM(s):</string>
    <string name="mouse_s">Mouse(s):</string>
    <string name="subtotal">Subtotal:</string>
    <string name="total">Total:</string>
    <string name="btnBack">Back</string>
    <string name="usb_8_50">USB($8.50)</string>
    <string-array name="spinner_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="prompt">Select Number</string>
    <string name="usb_s">USB(s):</string>
</resources>