<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4E5BF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondActivity">

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/computer_store"
            android:textColor="#00838F"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblOrderResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/OrderResult"
            android:textColor="#00838F"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblTitle" />

        <TextView
            android:id="@+id/lblItemsOrdered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/lblItemsOrdered"
            android:textColor="#00838F"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblOrderResult" />

        <TextView
            android:id="@+id/txtCpuOrdered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text=""
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/txtItemsOrdered"
            app:layout_constraintTop_toBottomOf="@+id/lblItemsOrdered" />

        <TextView
            android:id="@+id/txtRamOrdered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text=""
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/txtCpuOrdered"
            app:layout_constraintTop_toBottomOf="@+id/txtCpuOrdered" />

        <TextView
            android:id="@+id/txtMouseOrdered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text=""
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/txtRamOrdered"
            app:layout_constraintTop_toBottomOf="@+id/txtRamOrdered" />

        <TextView
            android:id="@+id/txtSubTotalOrdered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text=""
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/txtUsbOrdered"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <TextView
            android:id="@+id/txtTotalOrdered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text=""
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/txtSubTotalOrdered"
            app:layout_constraintTop_toBottomOf="@+id/txtSubTotalOrdered" />

        <TextView
            android:id="@+id/txtItemsOrdered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:text=""
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/lblItemsOrdered"
            app:layout_constraintTop_toBottomOf="@+id/lblOrderResult" />

        <TextView
            android:id="@+id/lblCpu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/cpu_s"
            android:textColor="#00838F"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblItemsOrdered" />

        <TextView
            android:id="@+id/lblRam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/ram_s"
            android:textColor="#00838F"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblCpu" />

        <TextView
            android:id="@+id/lblMouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/mouse_s"
            android:textColor="#00838F"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblRam" />

        <TextView
            android:id="@+id/lblSubTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/subtotal"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <TextView
            android:id="@+id/lblTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/total"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblSubTotal" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/btnBack"
            android:textColor="#555555"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTotalOrdered" />

        <TextView
            android:id="@+id/txtUsbOrdered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text=""
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/txtMouseOrdered"
            app:layout_constraintTop_toBottomOf="@+id/txtMouseOrdered" />

        <TextView
            android:id="@+id/lblUsb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/usb_s"
            android:textColor="#00838F"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblMouse" />

        <View
            android:id="@+id/divider2"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblUsb" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
